app/assets/stylesheets/twocol.scss
.two-column {

  position: relative;
  overflow: hidden;

  .two-column-left {
    float: left;
    width: 300px;
    overflow-y: scroll;
    overflow-x: visible;
    position: relative;
  }

  .two-column-right {
    float: left;
    width: calc(100% - 310px);
    overflow-y: scroll;
    overflow-x: visible;
    padding: 10px 10px 0 0;
    position: relative;  
  }

  .two-column-control {
    width: 250px;
    padding: 5px 15px 15px 15px;
    margin: 10px 10px 0 10px;
    border: 1pt solid #ccc;
    word-wrap: break-word;   
    cursor: pointer;
    display: block;
    h5 {
      text-align: center;
      margin: 5px;
      padding: 0;
    }    
  }

  .two-column-control-on {  
    box-shadow: 0 0 10px #9ecaed;
  }

  .two-column-control-error {  
    background: #ffff00;
  }  

  .two-column-control-no-click {  
    cursor: default;
  } 

  .two-column-control-no-click:active {  
    background: white;
  }   

}

